# CTS-forecasting

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: settings.yaml
data/submission/: task_a_submission.csv  task_b_submission.csv
data/submission/PureML_v5/daily_batch/no_daily_count/: task_a_submission.csv  task_b_submission.csv
data/submission/PureML_v5/lightgbm/: task_a_submission.csv  task_b_submission.csv
data/submission/PureML_v5/random_forest/: task_a_submission.csv  task_b_submission.csv
data/submission/v4/: task_a_submission.csv  task_b_submission.csv
docs/: plan.md  request.md
notebooks/: 01_eda_overview.py  特征工程 (2).ipynb
scripts/: analyze.py  check_tides.py  evaluate.py  evaluate_PureML_daily_v5.py  evaluate_PureML_v5.py  evaluate_task_a_reconstruction.py  explore.py  explore_periodicity.py  inference_pure.py  plot_prediction_comparison.py  preprocess.py  reconstruct_task_a_gap.py  search_ensemble.py  train.py  train_PureML_daily_v5.py  train_PureML_reconstructed_v6.py  train_PureML_v5.py  train_v2.py  train_v3.py  train_v4.py  visualize_roles.py  visualize_vessels.py
src/: evaluation.py  submission.py
src/data/: __init__.py  cleaner.py  loader.py  task_a_reconstruction.py
src/features/: __init__.py  ml.py  spatial.py  temporal.py  zone.py
src/models/: autoregressive.py  baseline.py  calibrated.py  ensemble.py  tree.py
tests/: test_calibrated.py  test_cleaner.py  test_ensemble.py  test_evaluation.py  test_ml_features.py  test_task_a_reconstruction.py  test_tree_models.py  test_zone.py
(+4 files in other folders)
